Display default transaction fee percent used

--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -227,6 +227,7 @@
             [profitOpportunities]="filterOpportunities(twoLegArbitrageProfitOpportunities)"
             [totalNumberOfUnfilteredOpportunities]="getTotalNumberOfOpportunities(twoLegArbitrageProfitOpportunities)"
             [orderBookAmountThresholdIndexSelected]="commonFilter.orderBookAmountThresholdIndexSelected"
+            [defaultTransactionFeePercent]="defaultTransactionFeePercent"
         ></app-two-leg-arbitrage-opportunities-table>
     </div>
 
